@@ -9,6 +9,9 @@ breadcrumbsnav-0.2 (not yet released)
  #4411: breadcrumbs.css contains invalid rule
  #7036: ignore_pattern option doesn't work
 
+ new features
+ #7231: Make label "Breadcrumbs:" configurable
+
 
 breadcrumbsnav-0.1 (14-Jan-2008)
  initial release
